updated css, fixed overflow issue

--- a/main/main-web-app/webroot/css/main_style.css
+++ b/main/main-web-app/webroot/css/main_style.css
@@ -59,7 +59,9 @@ img.shire-logo {
 }
 
 .company-item {
-	height: 3em;
+	min-height: 3em;
+	height: auto;
+	overflow: auto;
     border-radius: 10px;
 }
 
